src/css/style.css
/* Set the entire body as draggable using the '-webkit-app-region: drag' property.
The -webkit-app-region property blocks all other input so any child elements which
require inputs need to set '-webkit-app-region: no-drag' property */

ul,
li {
    padding: 0;
    margin: 0;
    list-style: none;
}

#search-results {
    background: #e5e5e5;
    width: 100%;
    z-index: 1000;
    padding-left: 1px;
    padding-right: 1px;
    margin-top: -14px;
}

    #search-results.open ul {
        padding: 10px;
    }

    #search-results.card {
        margin-bottom: 0;
    }

.search-results-card-inner {
    padding: 0;
}

.result {
    color: #000000;
    padding: 10px 20px;
    display: block;
    cursor: pointer;
    background-color: white;
}

    .result:hover {
        background-color: #ececec;
    }

    .result.active {
        background-color: #bebebe;
    }

    .result .title {
        margin-left: 50px;
    }

#search {
    width: 100%;
    height: 40px;
    font-size: 20px;
    padding: 10px;
}

.searchResult-description {
    font-size: 13px;
}

.searchResult-projectName {
    font-size: 15px;
}

.task {
    margin-top: 5px;
    border: 1px solid #cecece;
    background-color: #f3f3f3;
}

.taskHeader {
    font-size: 15px;
    background-color: #da3232;
    color: #ffffff;
    height: 25px;
    padding-top: 2px;
}

.hours {
    margin-top: 10px;
}

.comment {
    width: 100%;
    margin-top: 10px;
}

.activity {
    margin-top: 10px;
}

.datePicker {
    display: inline-block;
    width: 50%;
    -webkit-app-region: no-drag;
}

    .datePicker input {
        margin: auto;
        width: 80px;
        height: 24px;
        border-bottom-style: dashed !important;
    }

.container-inner {
    margin-top: 100px;
}

/* ---------- awads styles -------------*/
.logo-img {
    padding: 2px 0 0 5px;
}

.btn-lazy {
    background-color: #EA5E5D;
    color: #fff;
}

    .btn-lazy, .btn-lazy:active, .btn-lazy:focus, .btn-lazy:hover {
        color: #fff;
    }

.navbar.navbar, .navbar-default.navbar {
    background: #EA5E5D;
}

.list-item-title {
    font-size: 14px;
    line-height: 0;
    margin-bottom: 2px;
}

.list-item-description {
    color: #666;
    font-size: 12px;
    margin-bottom: -5px;
    width: 80%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.date-picker-container #datepicker-adv-1{
    color: #fff !important;
    border-color: #fff;
}

.tile-wrap{
    overflow-x: hidden; /*hide horizontal scroll*/
    overflow-y: auto;
}

.tile-collapse.active {
    margin-right: 0;
    margin-left: 0;
}

/* ---------- awads styles end -------------*/

